tests/Semantic/test_2_r05.out
Error type 5 at Line 6: unmatching type on both sides of assignment
