tests/Semantic/test_2_r05.spl
int test_2_r05()
{
  float iii = 5.0;
  float kkk = 1.2;
  int ttt;
  ttt = iii * kkk;
  return 0;
}
